bh#18 - grid corrections spacing on collection/search templates

--- a/assets/global-tailwind.css
+++ b/assets/global-tailwind.css
@@ -854,6 +854,14 @@ video {
   height: 100%;
 }
 
+.h-9{
+  height: 2.25rem;
+}
+
+.h-\[36px\]{
+  height: 36px;
+}
+
 .max-h-\[10rem\]{
   max-height: 10rem;
 }
@@ -1070,6 +1078,15 @@ video {
 
 .gap-8{
   gap: 2rem;
+}
+
+.gap-x-4{
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
+}
+
+.gap-y-8{
+  row-gap: 2rem;
 }
 
 .overflow-hidden{
